--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 
 <body>
     <header>
-        <a href="./index.html" class="logo">WebStudio</a>
+
         <nav>
+            <a href="./index.html" class="logo">WebStudio</a>
             <ul>
                 <li><a href="./index.html">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
-            <address class="header-contacts">
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <address>
+                <ul>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
             </address>
         </nav>
     </header>
@@ -65,22 +68,22 @@
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><img src="images/photo-1.jpg" alt="Mark Guerrero" width="264" />
+                <li><img src=".images/photo-1.jpg" alt="Mark Guerrero" width="264" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="images/photo-2.jpg" alt="Tom Ford" width="264" />
+                    <img src=".images/photo-2.jpg" alt="Tom Ford" width="264" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="images/photo-3.jpg" alt="Camila Garcia" width="264" />
+                    <img src=".images/photo-3.jpg" alt="Camila Garcia" width="264" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="images/photo-4.jpg" alt="Daniel Wilson" width="264" />
+                    <img src=".images/photo-4.jpg" alt="Daniel Wilson" width="264" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
