--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
     <header>
-
         <nav>
             <a href="./index.html" class="logo">WebStudio</a>
             <ul>
@@ -26,12 +25,14 @@
             </address>
         </nav>
     </header>
+
     <main>
         <section class="hero">
             <h1>Effective Solutions
                 for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
+
         <section>
             <h2>Our advantages</h2>
             <ul>
@@ -57,6 +58,7 @@
                 </li>
             </ul>
         </section>
+
         <section>
             <h2>What are we doing</h2>
             <ul>
@@ -65,31 +67,33 @@
                 <li><img src="./images/img-3.jpg" alt="Design" width="360" /></li>
             </ul>
         </section>
+
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><img src=".images/photo-1.jpg" alt="Mark Guerrero" width="264" />
+                <li><img src="./images/photo-1.jpg" alt="Mark Guerrero" width="264" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src=".images/photo-2.jpg" alt="Tom Ford" width="264" />
+                    <img src="./images/photo-2.jpg" alt="Tom Ford" width="264" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src=".images/photo-3.jpg" alt="Camila Garcia" width="264" />
+                    <img src="./images/photo-3.jpg" alt="Camila Garcia" width="264" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src=".images/photo-4.jpg" alt="Daniel Wilson" width="264" />
+                    <img src="./images/photo-4.jpg" alt="Daniel Wilson" width="264" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
+
     <footer>
         <a href="./index.html" lang="en" class="logo">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
